src/main/java/ca/ece/ubc/cpen221/mp5/StructuredQueries.g4
grammar StructuredQueries;
orExpr : andExpr(or andExpr)* ;
andExpr : atom(and atom)* ;
atom : in | category | rating | price | name | orWithinAtom ;
or : '||' ;
and : '&&' ;
ineq : gt | gte | lt | lte | eq ;
gt : '>' ;
gte : '>=' ;
lt : '<' ;
lte : '<=' ;
eq : '=' ;
in : 'in' LParen STRING+ RParen ;
category : 'category' LParen STRING RParen ;
name : 'name' LParen STRING+ RParen ;
rating : 'rating' ineq NUM ;
price : 'price' ineq NUM ;
orWithinAtom : LParen orExpr RParen;
LParen : '(' ;
RParen : ')' ;
NUM : [1-5] ;
STRING : [0-9a-zA-Z]+ ;
WS : [ \r\n\t] + -> skip ;
